# feather-etl

./: .gitignore  AGENT_HANDOFF.md  CLAUDE.md  README.md  mise.toml  pyproject.toml
.claude/commands/: research_codebase.md
.claude/rules/: feather-etl-project.md
.claude/skills/: README.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: CONTRIBUTING.md  CURRENT_STATE.md  README.md  personas.md  prd.md  research.md  testing-feather-etl.md
docs/architecture/: README.md  warehouse-layers.md
docs/conventions/: README.md  code-layout.md  spec-template.md
docs/issues/: 26-discover-views.md  README.md
scripts/: create_csv_sqlite_fixtures.py  create_excel_fixture.py  create_postgres_test_fixture.py  create_sample_erp_fixture.py  create_test_fixture.py  hands_on_test.sh  schema_viewer.html
speclan/: mission.md  vision.md
src/feather/: alerts.py  cli.py  (+6 more)
tests/: README.md  conftest.py  db_bootstrap.py  helpers.py  test_alerts.py  test_append.py  test_boundary_dedup.py  test_cache.py  test_cli.py  test_cli_structure.py  test_config.py  test_core_module_purity.py  test_csv_glob.py  test_curation.py  test_curation_config_integration.py  test_dedup.py  test_destinations.py  test_discover.py  test_discover_core.py  test_discover_expansion.py  test_discover_io.py  test_discover_state.py  test_dq.py  test_e2e.py  test_excel.py  test_expand_db_sources.py  test_explicit_name_flag.py  test_history_core.py  test_incremental.py  test_init_wizard.py  test_integration.py  test_json.py  test_json_output.py  test_mode.py  test_multi_source_e2e.py  test_mysql.py  test_pipeline.py  test_postgres.py  test_retry.py  test_schema_drift.py  (+9 more)
(+326 files in other folders)
