[project]
name = "feather-etl"
version = "0.1.2"
description = "Config-driven ETL for heterogeneous ERP sources → local DuckDB"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Siraj Samsudeen", email = "mailsiraj@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["etl", "duckdb", "erp", "data-engineering", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "pyodbc>=5.0",
    "psycopg2-binary>=2.9",
    "pytz",  # not imported directly, but DuckDB needs it for timestamp→Python conversion
]

[project.urls]
Homepage = "https://github.com/siraj-samsudeen/feather-etl"
Repository = "https://github.com/siraj-samsudeen/feather-etl"
Issues = "https://github.com/siraj-samsudeen/feather-etl/issues"

[project.scripts]
feather = "feather_etl.cli:app"
feather-etl = "feather_etl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feather_etl"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "scripts/",
    "docs/",
    ".claude/",
    ".codegraph/",
    ".planning/",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
